--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,26 @@
 </ion-header>
 
 <ion-content>
- <p>
-   Sample Changes 99
- </p>
+  <ion-slides pager>
+
+    <ion-slide>
+      <img src="assets/Images/slide1.jpg">
+    </ion-slide>
+
+    <ion-slide>
+      <img src="assets/Images/slide2.jpg">
+    </ion-slide>
+
+    <ion-slide>
+      <img src="assets/Images/slide3.jpg">
+    </ion-slide>
+
+  </ion-slides>
+  
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Profunia</ion-title>
+  </ion-toolbar>
+</ion-footer>
