HomePage Slider Added

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,46 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
- <p>
-   Sample Changes 999
- </p>
+<ion-content >
+ <ion-card>
+   <ion-slides pager>
+
+  <ion-slide> 
+    <img src="assets/Images/slider-3.jpg" height="200" />
+  </ion-slide>
+
+  <ion-slide>  
+     <img src="assets/Images/slider-2.jpg" height="200"/>
+  </ion-slide>
+  <ion-slide>   
+     <img src="assets/Images/slider-1.jpg" height="200"/>
+  </ion-slide>
+</ion-slides>
+ </ion-card>
+ <ion-card>
+<ion-row>
+<ion-col>
+  <button ion-button full >Technical Q&A</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>Self Introduction</button>
+</ion-col>
+</ion-row>
+<ion-row>
+<ion-col>
+  <button ion-button full>Group Discussion</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>HR Interview Q&A</button>
+</ion-col>
+</ion-row>
+<ion-row>
+<ion-col>
+  <button ion-button full>Interview Tips</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>Confidence</button>
+</ion-col>
+</ion-row>
+ </ion-card>
 </ion-content>
