--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,8 +8,9 @@
 </ion-header>
 
 <ion-content>
-<<<<<<< HEAD
-  <ion-slides pager>
+
+ <ion-card>
+    <ion-slides pager>
 
     <ion-slide>
       <img src="assets/Images/slide1.jpg">
@@ -24,12 +25,34 @@
     </ion-slide>
 
   </ion-slides>
-  
-=======
- <p>
-   Sample Changes 999
- </p>
->>>>>>> 5acc785fdf3c4d3c8d5f29b23f6bc64f38ac456d
+   </ion-card>
+
+ <ion-card>
+<ion-row>
+<ion-col>
+  <button ion-button full >Technical Q&A</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>Self Introduction</button>
+</ion-col>
+</ion-row>
+<ion-row>
+<ion-col>
+  <button ion-button full>Group Discussion</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>HR Interview Q&A</button>
+</ion-col>
+</ion-row>
+<ion-row>
+<ion-col>
+  <button ion-button full>Interview Tips</button>
+</ion-col>
+<ion-col>
+  <button ion-button full>Confidence</button>
+</ion-col>
+</ion-row>
+ </ion-card>
 </ion-content>
 
 <ion-footer>
