Button Link to menu troggle

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
  <ion-card>
 <ion-row>
 <ion-col>
-  <button ion-button full >Technical Q&A</button>
+  <button ion-button full menuToggle >Technical Q&A</button>
 </ion-col>
 <ion-col>
   <button ion-button full>Self Introduction</button>
