--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -18,7 +18,7 @@
 <ion-content padding>
   <ion-label>Interview Questions</ion-label>
   <ion-list *ngIf="questionList">   
-    <button text-wrap ion-item *ngFor="let item of Tempitems, let i=index" (click)="itemTapped(item)">      
+    <button text-wrap ion-item *ngFor="let item of Tempitems, let i=index" (click)="itemTapped(i)">      
      {{i+1}}. {{item.qus}}     
     
     </button>
