Self Introduction Q&A Added

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,7 +33,7 @@
   <button ion-button full menuToggle >Technical Q&A</button>
 </ion-col>
 <ion-col>
-  <button ion-button full>Self Introduction</button>
+  <button ion-button full (click)="goToSelfIntro()">Self Introduction</button>
 </ion-col>
 </ion-row>
 <ion-row>
