Interview Tips Q&A Added

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -46,7 +46,7 @@
 </ion-row>
 <ion-row>
 <ion-col>
-  <button ion-button full>Interview Tips</button>
+  <button ion-button full (click)="goToInterviewTips()" >Interview Tips</button>
 </ion-col>
 <ion-col>
   <button ion-button full>Confidence</button>
