--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,7 +41,7 @@
   <button ion-button full>Group Discussion</button>
 </ion-col>
 <ion-col>
-  <button ion-button full>HR Interview Q&A</button>
+  <button ion-button full (click)="goTohrInterview()">HR Interview Q&A</button>
 </ion-col>
 </ion-row>
 <ion-row>
