--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -38,7 +38,7 @@
 </ion-row>
 <ion-row>
 <ion-col>
-  <button ion-button full>Group Discussion</button>
+  <button ion-button full (click)="goTogroupDiscusstion()">Group Discussion</button>
 </ion-col>
 <ion-col>
   <button ion-button full (click)="goTohrInterview()">HR Interview Q&A</button>
