--- a/src/pages/ans-details/ans-details.html
+++ b/src/pages/ans-details/ans-details.html
@@ -3,6 +3,13 @@
 
   <ion-navbar color="primary">
     <ion-title>{{title}}</ion-title>
+    <ion-buttons end>
+   <button ion-button icon-only (click)="myFevorite()" item-end>
+                        <ion-icon *ngIf="isFevorate" name="heart" color="highliter"></ion-icon> 
+                        <ion-icon *ngIf="!isFevorate" name="heart-outline"></ion-icon>                       
+                    </button>    
+
+    </ion-buttons>
   </ion-navbar>
 <h6 padding *ngIf="qnsDetails" text-wrap>{{qnsDetails.qus}}</h6>
 </ion-header>
