--- a/src/pages/ans-details/ans-details.html
+++ b/src/pages/ans-details/ans-details.html
@@ -4,9 +4,9 @@
   <ion-navbar color="primary">
     <ion-title>{{title}}</ion-title>
     <ion-buttons end>
-   <button ion-button icon-only (click)="myFevorite()" item-end>
-                        <ion-icon *ngIf="isFevorate" name="heart" color="highliter"></ion-icon> 
-                        <ion-icon *ngIf="!isFevorate" name="heart-outline"></ion-icon>                       
+   <button ion-button icon-only (click)="myShare()" item-end>
+                        <ion-icon  name="share"></ion-icon> 
+                       
                     </button>    
 
     </ion-buttons>
