production new changes files

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -42,7 +42,7 @@
   <button ion-button full menuToggle >Technical Q&A</button>
 </ion-col>
 <ion-col>
-  <button ion-button full (click)="goToSelfIntro()">Self Introduction</button>
+  <button ion-button full (click)="goTotesting()">Testing Q&A</button>
 </ion-col>
 </ion-row>
 <ion-row>
@@ -59,6 +59,14 @@
 </ion-col>
 <ion-col>
   <button ion-button full (click)="goToconfident()">Confidence</button>
+</ion-col>
+</ion-row>
+<ion-row>
+<ion-col>
+  <button ion-button full (click)="goToSelfIntro()">Self Introduction</button>
+</ion-col>
+<ion-col>
+  
 </ion-col>
 </ion-row>
  </ion-card>
